--- a/scripts/todo.txt
+++ b/scripts/todo.txt
@@ -2,3 +2,4 @@
 - Create a script that searches for paths (Windows) where there are spaces AND it is not enclosed within quotations
 - Create a snmprecon.py 
 - Look into what is allowed on OSCP, scripts, AutoBlue
+- Create a resources file to reference, can pull from personal notes
