--- a/scripts/todo.txt
+++ b/scripts/todo.txt
@@ -1,6 +1,8 @@
-- Create a methodology, with scripts and notes combined (as precise as possible), categorized appropriately. (eg. if this than this, if that than that). Encompasses the entire domain.
+- Create a methodology, with scripts and notes combined (as precise as possible), categorized appropriately. (eg. if this than this, if that than that). Encompasses the entire domain. ** May be a good idea to script everything that is reliable, then detail and list what manual enumeration OffSec has covered. ** Not only will it save time, but help you understand exactly what the automated tools are doing. TLDR: DIY PEASS
 - Create a script that searches for paths (Windows) where there are spaces AND it is not enclosed within quotations
 - Create a snmprecon.py 
 - Look into what is allowed on OSCP, scripts, AutoBlue
 - Create a resources file to reference, can pull from personal notes
 - Create a map, Windows privileges --> Possible Exploit
+- Have scripts that automatically run when you compromise another network, will help with port forwarding and seeing what is available in the segmented network
+- Create or find manual sqli enumeration checklist, maybe automate 
