--- a/scripts/todo.txt
+++ b/scripts/todo.txt
@@ -7,3 +7,4 @@
 - Have scripts that automatically run when you compromise another network, will help with port forwarding and seeing what is available in the segmented network
 - Create or find manual sqli enumeration checklist, maybe automate 
 - Consider collecting every password referenced in Pen-200, putting them into a list, and making a custom rule set based off of them
+- Web enumeration checklist 
