--- a/scripts/todo.txt
+++ b/scripts/todo.txt
@@ -9,3 +9,4 @@
 - Consider collecting every password referenced in Pen-200, putting them into a list, and making a custom rule set based off of them
 - Web enumeration checklist 
 - Have automated way to extract notes in particular situations
+- Create a script to run all of the netexec commands with given users.txt and passwords.txt
